<resources>
    <string name="app_name">TEApp</string>

    <string name="e_mail">Pon tu email</string>
    <string name="password">Pon tu contraseña</string>
    <string name="reset_password">Establecer contraseña</string>
    <string name="label_two">o entra con</string>
    <string name="login">Login</string>
    <string name="member_label">Aun no estas registrado?</string>
    <string name="sign_up_label">Registrate</string>
    <string name="your_name">Escribe tu nombre</string>
    <string name="re_type_password">Repita tu contraseña</string>

    <string name="sign_up_with">Registrarse con</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_repeat_password">Your password and confirmation password do not match </string>
    <string name="error_field_required">Required field</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="facebook_app_id">247480827509557</string>
    <string name="fb_login_protocol_scheme">fb247480827509557</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">7b6bf82c9748cb15a8d766c3c3509ab1</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="post">New Post</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="article_title">Title</string>
    <string name="article_author">Author</string>
    <string name="article_category">Category</string>
    <string name="publish">Publicar</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
</resources>