<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context=".login.LoginActivity">


    <TextViewd
        android:id="@+id/log_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/log_email"
        android:layout_marginBottom="76dp"
        android:fontFamily="@font/varelisa"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/log_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/log_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/log_password"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorAccent"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/log_password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/log_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/loginbutton"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_password" />

    <TextView
        android:id="@+id/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="sans-serif"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/label_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="sans-serif"
        android:text="@string/label_two"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_fb_login"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_above="@id/register_label"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="28dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/register_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:roundedCorner="true"
        app:roundedCornerRadius="50dp"
        app:transparentBackground="true" />

    <ImageView
        android:id="@+id/loginFacebookImg"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_above="@id/register_label"
        android:layout_marginStart="172dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/facebook_100_85"
        app:layout_constraintBottom_toTopOf="@id/register_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.777"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_google_button"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_above="@id/register_label"
        android:layout_marginStart="206dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="28dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/register_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/login_google"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_above="@id/register_label"
        android:layout_marginStart="206dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/google_100_85"
        app:layout_constraintBottom_toTopOf="@id/register_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="19dp"
        android:text="@string/member_label"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/signup_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="19dp"
        android:text="@string/sign_up_label"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/register_label" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/button_color"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

</androidx.constraintlayout.widget.ConstraintLayout>